Abstract task ArrayList into a class